--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>The password is cheese</title>
     <meta name="description" content="The password is description">
     <meta name="keywords" content="the password is keywords">
-    <link rel="stylesheet" href="main.css">
+    <link type="text/css" rel="stylesheet" href="/main.css">
   </head>
   <body>
     <div id="main" class="center">
