--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>The password is cheese</title>
-    <meta name="description" content="The password is description">
-    <meta name="keywords" content="the password is keywords">
-    <link type="text/css" rel="stylesheet" href="/main.css">
+    <title>Can you escape this website?</title>
+    <link type="text/css" rel="stylesheet" href="base.css">
+    <link type="text/css" rel="stylesheet" href="welcome.css">
   </head>
   <body>
     <div id="main" class="center">
-      <h1>👋</h1>
+      <h1>&#128075</h1>
       <p>
         Welcome to the CS10 Web Design escape room! Over the past few classes, you have
         been learning about how website are built using HTML and CSS. You've seen how
@@ -25,9 +24,15 @@
       to move on to the next page by appending it to the URL (remember that websites
       are just collections of HTML files in folders on a server somewhere. If you know
       the address of that file, you can access it). For example, if you think that
-      the password hidden in this room is "password" you should enter <a href="puzzle.wolfie.dev/start/password">puzzle.wolfie.dev/start/password</a> into the URL bar.
+      the password hidden in this room is "password", you should enter 
+      <a href="escape.wolfie.dev/password">escape.wolfie.dev/password</a> into the URL bar.
+      Then, if in the next room you think the password is "computer", you should enter 
+      <a href="escape.wolfie.dev/password/computer">escape.wolfie.dev/password/computer</a>
+      into the URL bar.
       </p>
-      <p>Goodluck! And be careful, sometimes things aren't always what they seem to be 👻</p>
+      <p>Goodluck! And be careful, things aren't always what they seem to be 
+      <span class="tooltip">&#128270<span class="tooltiptext">The password is ghost.</span></span>
+      </p>
     </div>
   </body>
 </html>
