Add pages up to puzzle

--- a/ghost/bluejay/index.html
+++ b/ghost/bluejay/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>Clues are everywhere...</title>
     <link type="text/css" rel="stylesheet" href="../../base.css">
+    <link type="text/css" rel="stylesheet" href="bluejay.css">
   </head>
   <body>
     <div id="main" class="center">
-      <h1>&#128679</h1>
+      <h1>&#128038</h1>
       <p>
-      You reached a part of the escape room that is still under development.
-      Check back soon to find the password.
+      The password may give you a hin<span class="password-letter">t</span> for solving each page of the escape room, but you won't
+      always be able to <span class="password-letter">r</span>ely on them. Somet<span class="password-letter">i</span>mes, you will 
+      need to use other methods to figure out what the password is. Pay attention to detail because <span class="password-letter">c</span>lues
+      may be lurking right before your eye. Good luc<span class="password-letter">k</span>!
       </p>
     </div>
   </body>
