--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="escape.wolfie.dev/password/computer">escape.wolfie.dev/password/computer</a>
       into the URL bar.
       </p>
-      <p>Goodluck! And be careful, things aren't always what they seem to be 
+      <p>Goodluck! And be careful, things aren't always what they seem to be. 
       <span class="tooltip">&#128270<span class="tooltiptext">The password is ghost.</span></span>
       </p>
     </div>
