add all pages, still need to check full run

--- a/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/index.html
@@ -2,39 +2,22 @@
 <html>
   <head>
     <title>This is getting spooky</title>
-    <link type="text/css" rel="stylesheet" href="../base.css">
-    <link type="text/css" rel="stylesheet" href="ghost.css">
+    <link type="text/css" rel="stylesheet" href="../../../../../../../../base.css">
+    <link type="text/css" rel="stylesheet" href="puzzle.css">
   </head>
   <body>
     <div id="main" class="center">
-      <h1>&#128123</h1>
-      <p>
-      You may be wondering why the password was ghost. Solving this page
-      may give you an idea.
-      </p>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      </br>
-      <p class="ghost">The password is bluejay.</p>
+      <h1>&#129513</h1>
+      <div class="puzzle">
+        <img id="third" src="imgs/piece_3.png" alt="Third puzzle piece." width="200" height="200">
+        <img id="seventh" src="imgs/piece_7.png" alt="Seventh puzzle piece." width="200" height="200">
+        <img id="ninth" src="imgs/piece_9.png" alt="Ninth puzzle piece." width="200" height="200">
+        <img id="sixth" src="imgs/piece_6.png" alt="Sixth puzzle piece." width="200" height="200">
+        <img id="eigth" src="imgs/piece_8.png" alt="Eigth puzzle piece." width="200" height="200">
+        <img id="second" src="imgs/piece_2.png" alt="Second puzzle piece." width="200" height="200">
+        <img id="fourth" src="imgs/piece_4.png" alt="Fourth puzzle piece." width="200" height="200">
+        <img id="first" src="imgs/piece_1.png" alt="First puzzle piece." width="200" height="200">
+        <img id="fifth" src="imgs/piece_5.png" alt="Fifth puzzle piece." width="200" height="200">
     </div>
   </body>
 </html>
