Finished escape roomm

--- a/ghost/bluejay/index.html
+++ b/ghost/bluejay/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Clues are everywhere...</title>
+    <title>&#128038; Clues are everywhere...</title>
     <link type="text/css" rel="stylesheet" href="../../base.css">
     <link type="text/css" rel="stylesheet" href="bluejay.css">
   </head>
