--- a/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#129513; You're getting close to the end</title>
     <link type="text/css" rel="stylesheet" href="../../../../../../../../base.css">
     <link type="text/css" rel="stylesheet" href="puzzle.css">
   </head>
