--- a/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/solar/escape/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/solar/escape/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#127882; You made it out!</title>
     <link type="text/css" rel="stylesheet" href="../../../../../../../../../../base.css">
   </head>
   <body>
     <div id="main" class="center">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/hT94urc-MVw?autoplay=1?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <h1>&#127882;</h1>
+      <p>Congratualtions! You escaped the room!</p>
+      <video controls autoplay>
+        <source src="escape.mp4" type="video/mp4">
+        Your browser does not support the video tag, but you did escape the room!
+      </video>
     </div>
   </body>
 </html>
