--- a/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/solar/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/harry/puzzle/solar/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#9728;&#65039; In the center of the universe...</title>
     <link type="text/css" rel="stylesheet" href="../../../../../../../../../base.css">
     <link type="text/css" rel="stylesheet" href="solar.css">
   </head>
