--- a/ghost/bluejay/trick/proof/manatee/house/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#127968; The dimensions of this house seem a little off...</title>
     <link type="text/css" rel="stylesheet" href="../../../../../../base.css">
     <link type="text/css" rel="stylesheet" href="house.css">
   </head>
