--- a/ghost/bluejay/trick/proof/manatee/index.html
+++ b/ghost/bluejay/trick/proof/manatee/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#128026; manatees actually don't have much to do with this page if we're being honest...</title>
     <link type="text/css" rel="stylesheet" href="../../../../../base.css">
     <link type="text/css" rel="stylesheet" href="manatee.css">
   </head>
