--- a/ghost/index.html
+++ b/ghost/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#128123; This is getting spooky</title>
     <link type="text/css" rel="stylesheet" href="../base.css">
     <link type="text/css" rel="stylesheet" href="ghost.css">
   </head>
