--- a/ghost/bluejay/trick/proof/manatee/house/harry/index.html
+++ b/ghost/bluejay/trick/proof/manatee/house/harry/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is getting spooky</title>
+    <title>&#127908; This page is not as it was...</title>
     <link type="text/css" rel="stylesheet" href="../../../../../../../base.css">
     <link type="text/css" rel="stylesheet" href="hide-password.css">
   </head>
