--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Can you escape this website?</title>
+    <title>&#128075; Can you escape this website?</title>
     <link type="text/css" rel="stylesheet" href="base.css">
     <link type="text/css" rel="stylesheet" href="welcome.css">
   </head>
