Update href for prod

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       are just collections of HTML files in folders on a server somewhere. If you know
       the address of that file, you can access it). For example, if you think that
       the password hidden in this room is "password", you should enter 
-      <a href="escape.wolfie.dev/password">escape.wolfie.dev/password</a> into the URL bar.
+      <a href="password">escape.wolfie.dev/password</a> into the URL bar.
       Then, if in the next room you think the password is "computer", you should enter 
-      <a href="escape.wolfie.dev/password/computer">escape.wolfie.dev/password/computer</a>
+      <a href="password/computer">escape.wolfie.dev/password/computer</a>
       into the URL bar.
       </p>
       <p>Goodluck! And be careful, things aren't always what they seem to be. 
